ChangeLog
=========

v0.1.3
------
* change status colors

v0.1.2
------
* fix minor bugs

v0.1.1
------
* first public release

v0.1.0
------
* init version