@@ -4,6 +4,7 @@ ChangeLog
 v0.1.3
 ------
 * change status colors
+* add total time column for task intervals in taskedit dialog
 
 v0.1.2
 ------
